# StreamArch

./: .gitignore  README.md  config.example.json  pyproject.toml
app/: __init__.py  main.py
app/application/: __init__.py
app/bootstrap/: __init__.py  container.py  shutdown.py  startup.py
app/domain/: __init__.py
app/infrastructure/: __init__.py
app/interfaces/: __init__.py
docs/: api-reference.md  api-ws-contracts-initial.md  architecture-initial-scheduler.md  cookies-import.md  core-modules-map.md  data-model-initial.md  roadmap-pending.md  scheduler-redesign-v2.md  streamarch-general-architecture-draft.md  streamcaporigin-preserve-refactor-drop.md
tests/: __init__.py
tests/contract/: __init__.py  test_api.py
tests/integration/: __init__.py  test_event_flow.py
tests/unit/: __init__.py  test_add_stream.py  test_config_loader.py  test_cookie_storage.py  test_disable_monitoring.py  test_enable_monitoring.py  test_event_bus.py  test_ffmpeg_progress_parser.py  test_ffmpeg_runner.py  test_ffmpeg_transmuxer.py  test_get_dashboard_state.py  test_list_recordings.py  test_list_streams.py  test_live_check.py  test_mark_favorite.py  test_monitoring_cycle.py  test_platform_semaphores.py  test_prediction_engine.py  test_prediction_features.py  test_prediction_policy.py  test_queue_planner.py  test_recording_config.py  test_recording_service.py  test_resolvers.py  test_stop_recording.py  test_unmark_favorite.py  test_update_stream.py  test_websocket_server.py  test_worker_pool.py
tmp/: command_line_ffmpeg.txt
ui/: index.html  package-lock.json  vite.config.ts
(+119 files in other folders)
