[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "streamarch"
version = "0.1.0"
description = "Stream monitoring and recording core engine"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["app*", "tests*"]
